Added spam manager, for detecting spam messages.  Only has one rule setup currently.  Updated Comment entity to include active field.  Updated relevant code and admin to show active and inactive comments.  Added link in comment email to admin page.

--- a/src/IAmBacon/IAmBacon.Domain/IAmBacon.Domain.csproj
+++ b/src/IAmBacon/IAmBacon.Domain/IAmBacon.Domain.csproj
@@ -78,7 +78,9 @@
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Smtp\EmailManager.cs" />
     <Compile Include="Smtp\Interfaces\IEmailManager.cs" />
+    <Compile Include="Utilities\Interfaces\ISpamManager.cs" />
     <Compile Include="Utilities\Seo.cs" />
+    <Compile Include="Utilities\SpamManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IAmBacon.Data\IAmBacon.Data.csproj">
