--- a/src/IAmBacon/IAmBacon/Web.config
+++ b/src/IAmBacon/IAmBacon/Web.config
@@ -38,9 +38,10 @@
     <add key="GoogleAnalyticsAccount" value="0" />
   </appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error?">
+    <customErrors mode="Off"/>
+    <!--<customErrors mode="On" defaultRedirect="~/Error?">
       <error redirect="~/error/notfound" statusCode="404" />
-    </customErrors>
+    </customErrors>-->
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Admin/Authentication/Login" timeout="2880" />
