--- a/src/IAmBacon/IAmBacon.Model/IAmBacon.Model.csproj
+++ b/src/IAmBacon/IAmBacon.Model/IAmBacon.Model.csproj
@@ -34,6 +34,9 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.5.0.0-rc\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="IAmBacon.Model">
+      <HintPath>..\IAmBacon\Bin\IAmBacon.Model.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
