--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -365,6 +365,7 @@
     <Content Include="Views\Shared\DisplayTemplates\PopularPostViewModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\RecentPostViewModel.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Shared\_Header.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
