Site redesign: Initial add of avatar and description to homepage.

--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -267,6 +267,7 @@
     <Content Include="apple-touch-icon-precomposed.png" />
     <Content Include="apple-touch-icon.png" />
     <Content Include="Content\font\icomoon\icomoon.svg" />
+    <Content Include="Content\images\colin-bacon.jpg" />
     <Content Include="Content\images\social.png" />
     <Content Include="Content\less\blog\images\background.png" />
     <Content Include="Areas\Admin\Views\Category\Details.cshtml" />
