--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -256,6 +256,10 @@
     <Compile Include="ViewModels\PostViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="404.aspx" />
+    <Content Include="404.html" />
+    <Content Include="500.aspx" />
+    <Content Include="500.html" />
     <Content Include="apple-touch-icon-114x114-precomposed.png" />
     <Content Include="apple-touch-icon-114x114.png" />
     <Content Include="apple-touch-icon-144x144-precomposed.png" />
