--- a/src/IAmBacon/IAmBacon/Web.config
+++ b/src/IAmBacon/IAmBacon/Web.config
@@ -38,10 +38,10 @@
     <add key="GoogleAnalyticsAccount" value="0" />
   </appSettings>
   <system.web>
-    <customErrors mode="Off"/>
-    <!--<customErrors mode="On" defaultRedirect="~/Error?">
-      <error redirect="~/error/notfound" statusCode="404" />
-    </customErrors>-->
+    <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite" defaultRedirect="~/500.aspx">
+      <error statusCode="404" redirect="~/404.aspx"/>
+      <error statusCode="500" redirect="~/500.aspx"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Admin/Authentication/Login" timeout="2880" />
@@ -131,6 +131,12 @@
     </httpCompression>
     
     <urlCompression doStaticCompression="true" doDynamicCompression="true" />
+    <httpErrors errorMode="DetailedLocalOnly">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="404.html" responseMode="File"/>
+      <remove statusCode="500"/>
+      <error statusCode="500" path="500.html" responseMode="File"/>
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
