Blog section: Added server side code and unit tests.

--- a/src/IAmBacon/IAmBacon/Web.config
+++ b/src/IAmBacon/IAmBacon/Web.config
@@ -26,7 +26,7 @@
   <connectionStrings>
     <add name="BaconContext" 
          providerName="System.Data.SqlClient" 
-         connectionString="Data Source=localhost;Initial Catalog=iambaconcouk_691276_db1;Integrated Security=SSPI;MultipleActiveResultSets=true" />
+         connectionString="Data Source=localhost\RASHER;Initial Catalog=iambaconcouk_691276_db1;Integrated Security=SSPI;MultipleActiveResultSets=true" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
