--- a/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
+++ b/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IAmBacon.Web.Tests</RootNamespace>
     <AssemblyName>IAmBacon.Web.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -16,6 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,6 +36,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq, Version=4.2.1408.717, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Moq.4.2.1408.0717\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
@@ -53,13 +58,30 @@
   <ItemGroup>
     <Compile Include="Areas\Controllers\Controllers.Tests.cs" />
     <Compile Include="Areas\Controllers\BaseController.Tests.cs" />
+    <Compile Include="Controllers\HomeController.Tests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IAmBacon.Domain\IAmBacon.Domain.csproj">
+      <Project>{F742ECC4-400A-4859-A055-220975DD9962}</Project>
+      <Name>IAmBacon.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IAmBacon.Model\IAmBacon.Model.csproj">
+      <Project>{683844A9-988F-4BB2-83A5-2043D499A3A2}</Project>
+      <Name>IAmBacon.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IAmBacon\IAmBacon.Web.csproj">
       <Project>{428f9eec-af70-45e6-bcc3-a1b245198ac7}</Project>
       <Name>IAmBacon.Web</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Choose>
