--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -247,7 +247,8 @@
     <Compile Include="Presentation\HtmlHelpers\Google.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ErrorViewModel.cs" />
-    <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\Home\HomeViewModel.cs" />
+    <Compile Include="ViewModels\Home\PostThumbViewModel.cs" />
     <Compile Include="ViewModels\Shared\FooterViewModel.cs" />
     <Compile Include="ViewModels\Shared\PopularPostViewModel.cs" />
     <Compile Include="ViewModels\Shared\RecentPostViewModel.cs" />
