--- a/src/IAmBacon/packages/repositories.config
+++ b/src/IAmBacon/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\IAmBacon.Web.Tests\packages.config" />
   <repository path="..\IAmBacon\packages.config" />
 </repositories>
