--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -309,18 +309,22 @@
     <Content Include="Content\sass\base\functions\_functions.scss" />
     <Content Include="Content\sass\base\mixins\_font.scss" />
     <Content Include="Content\sass\base\mixins\_typography.scss" />
+    <Content Include="Content\sass\components\_header.scss" />
+    <Content Include="Content\sass\base\_variables.scss" />
+    <Content Include="Content\sass\components\_footer.scss" />
+    <Content Include="Content\sass\components\_links-list.scss" />
     <None Include="Content\sass\modules\README.txt" />
-    <Content Include="Content\stylesheets\category-ie.css" />
-    <Content Include="Content\stylesheets\category.css" />
-    <Content Include="Content\stylesheets\landingpage-ie.css" />
-    <Content Include="Content\stylesheets\landingpage.css" />
     <Content Include="Content\stylesheets\pages\home\home-ie.css" />
     <Content Include="Content\stylesheets\pages\home\home.css" />
+    <Content Include="Content\stylesheets\pages\post\category-ie.css" />
+    <Content Include="Content\stylesheets\pages\post\category.css" />
+    <Content Include="Content\stylesheets\pages\post\landingpage-ie.css" />
+    <Content Include="Content\stylesheets\pages\post\landingpage.css" />
+    <Content Include="Content\stylesheets\pages\post\post-ie.css" />
+    <Content Include="Content\stylesheets\pages\post\post.css" />
+    <Content Include="Content\stylesheets\pages\post\tag-ie.css" />
+    <Content Include="Content\stylesheets\pages\post\tag.css" />
     <Content Include="Content\stylesheets\pages\styleguide\styleguide.css" />
-    <Content Include="Content\stylesheets\post-ie.css" />
-    <Content Include="Content\stylesheets\post.css" />
-    <Content Include="Content\stylesheets\tag-ie.css" />
-    <Content Include="Content\stylesheets\tag.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="googleb300e47449e1527f.html" />
@@ -357,7 +361,6 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Shared\EditorTemplates\CheckboxItem.cshtml" />
-    <Content Include="Views\Shared\_PostLayout.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\Tag.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\PostViewModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\CommentModel.cshtml" />
@@ -377,10 +380,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Content\sass\components\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\sass\partials\_header.scss" />
     <Content Include="Content\sass\pages\styleguide\styleguide.scss" />
     <Content Include="Content\sass\base\mixins\_clearfix.scss" />
     <Content Include="Content\sass\base\mixins\_base.scss" />
@@ -398,6 +399,7 @@
     <Content Include="Content\sass\utilities\_vertical-rhythm.scss" />
     <Content Include="Content\sass\pages\home\home-ie.scss" />
     <Content Include="Content\sass\utilities\_tables.scss" />
+    <Content Include="Content\sass\utilities\_grid.scss" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -459,24 +461,24 @@
     <Content Include="Views\Post\Details.cshtml" />
     <Content Include="Content\less\shared\mixins.less" />
     <Content Include="Content\less\home\home.less" />
-    <None Include="Content\sass\landingpage.scss" />
+    <None Include="Content\sass\pages\post\landingpage.scss" />
     <None Include="Content\sass\partials\_base.scss" />
     <None Include="Content\sass\modules\_mixins.scss" />
     <None Include="Content\sass\partials\README.txt" />
     <None Include="Content\sass\partials\_html-body.scss" />
     <None Include="Content\sass\modules\_all.scss" />
     <None Include="Content\sass\modules\_functions.scss" />
-    <None Include="Content\sass\post.scss" />
+    <None Include="Content\sass\pages\post\post.scss" />
     <None Include="Content\sass\modules\_colours.scss" />
     <None Include="Content\sass\modules\_mediaqueries.scss" />
     <None Include="Content\sass\partials\_respond.scss" />
-    <None Include="Content\sass\landingpage-ie.scss" />
-    <None Include="Content\sass\post-ie.scss" />
+    <None Include="Content\sass\pages\post\landingpage-ie.scss" />
+    <None Include="Content\sass\pages\post\post-ie.scss" />
     <None Include="Content\sass\partials\_code.scss" />
-    <None Include="Content\sass\category.scss" />
-    <None Include="Content\sass\category-ie.scss" />
-    <None Include="Content\sass\tag.scss" />
-    <None Include="Content\sass\tag-ie.scss" />
+    <None Include="Content\sass\pages\post\category.scss" />
+    <None Include="Content\sass\pages\post\category-ie.scss" />
+    <None Include="Content\sass\pages\post\tag.scss" />
+    <None Include="Content\sass\pages\post\tag-ie.scss" />
     <None Include="Content\sass\partials\_state.scss" />
     <None Include="Properties\PublishProfiles\PublishToLiveFolder.pubxml" />
     <None Include="Scripts\jquery-1.9.0.min.map" />
