--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -313,6 +313,7 @@
     <Content Include="Content\sass\base\_variables.scss" />
     <Content Include="Content\sass\components\_footer.scss" />
     <Content Include="Content\sass\components\_links-list.scss" />
+    <Content Include="Content\sass\components\_page-title.scss" />
     <None Include="Content\sass\modules\README.txt" />
     <Content Include="Content\stylesheets\pages\home\home-ie.css" />
     <Content Include="Content\stylesheets\pages\home\home.css" />
