--- a/src/IAmBacon/IAmBacon/Web.config
+++ b/src/IAmBacon/IAmBacon/Web.config
@@ -24,8 +24,8 @@
     <security allowRemoteAccess="false" />
   </elmah>
   <connectionStrings>
-    <add name="BaconContext" 
-         providerName="System.Data.SqlClient" 
+    <add name="BaconContext"
+         providerName="System.Data.SqlClient"
          connectionString="Data Source=localhost\RASHER;Initial Catalog=iambaconcouk_691276_db1;Integrated Security=SSPI;MultipleActiveResultSets=true" />
   </connectionStrings>
   <appSettings>
@@ -37,58 +37,60 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="GoogleAnalyticsAccount" value="0" />
   </appSettings>
-  <system.web>
-    <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite" defaultRedirect="~/500.aspx">
-      <error statusCode="404" redirect="~/404.aspx"/>
-      <error statusCode="500" redirect="~/500.aspx"/>
-    </customErrors>
-    <compilation debug="true" targetFramework="4.0" />
-    <authentication mode="Forms">
-      <forms loginUrl="~/Admin/Authentication/Login" timeout="2880" />
-    </authentication>
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Optimization" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-      </namespaces>
-    </pages>
-    <profile defaultProvider="DefaultProfileProvider">
-      <providers>
-        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
-      </providers>
-    </profile>
-    <membership defaultProvider="BaconMembershipProvider">
-      <providers>
-        <clear />
-        <add name="BaconMembershipProvider" type="IAmBacon.Domain.Membership.BaconMembershipProvider" connectionStringName="BaconContext" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
-      <providers>
-        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
-      </providers>
-    </roleManager>
-    <!--
+  <location path="." inheritInChildApplications="false">
+    <system.web>
+      <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite" defaultRedirect="~/500.aspx">
+        <error statusCode="404" redirect="~/404.aspx"/>
+        <error statusCode="500" redirect="~/500.aspx"/>
+      </customErrors>
+      <compilation debug="true" targetFramework="4.0" />
+      <authentication mode="Forms">
+        <forms loginUrl="~/Admin/Authentication/Login" timeout="2880" />
+      </authentication>
+      <pages>
+        <namespaces>
+          <add namespace="System.Web.Helpers" />
+          <add namespace="System.Web.Mvc" />
+          <add namespace="System.Web.Mvc.Ajax" />
+          <add namespace="System.Web.Mvc.Html" />
+          <add namespace="System.Web.Optimization" />
+          <add namespace="System.Web.Routing" />
+          <add namespace="System.Web.WebPages" />
+        </namespaces>
+      </pages>
+      <profile defaultProvider="DefaultProfileProvider">
+        <providers>
+          <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+        </providers>
+      </profile>
+      <membership defaultProvider="BaconMembershipProvider">
+        <providers>
+          <clear />
+          <add name="BaconMembershipProvider" type="IAmBacon.Domain.Membership.BaconMembershipProvider" connectionStringName="BaconContext" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        </providers>
+      </membership>
+      <roleManager defaultProvider="DefaultRoleProvider">
+        <providers>
+          <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+        </providers>
+      </roleManager>
+      <!--
             If you are deploying to a cloud environment that has multiple web server instances,
             you should change session state mode from "InProc" to "Custom". In addition,
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
-      <providers>
-        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
-      </providers>
-    </sessionState>
-    <httpHandlers>
-      <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
-      <add path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" />
-    </httpHandlers>
-  </system.web>
+      <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+        <providers>
+          <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
+        </providers>
+      </sessionState>
+      <httpHandlers>
+        <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
+        <add path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" />
+      </httpHandlers>
+    </system.web>
+  </location>
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network">
@@ -111,7 +113,7 @@
       <!--<mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />-->
     </staticContent>
     <!-- Enable Gzip -->
-     <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files">
+    <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files">
       <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" staticCompressionLevel="9" />
       <dynamicTypes>
         <add mimeType="text/*" enabled="true" />
@@ -129,7 +131,7 @@
         <add mimeType="*/*" enabled="false" />
       </staticTypes>
     </httpCompression>
-    
+
     <urlCompression doStaticCompression="true" doDynamicCompression="true" />
     <httpErrors errorMode="DetailedLocalOnly">
       <remove statusCode="404"/>
