Grunt file to compile SASS
The existing framework (compass) has been removed
as it had a dependency on Ruby.  This has been replaced
with a grunt task using grunt-sass which compiles with
libsass.

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,5 @@ src\IAmBacon\IAmBacon\.sass-cache
 
 # Files
 src\IAmBacon\IAmBacon\Web.Release.config
+*.map
+/src/IAmBacon/IAmBacon/node_modules
