--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -318,6 +318,7 @@
     <Content Include="Content\sass\components\_page-title.scss" />
     <Content Include="Content\sass\base\mixins\_vertical-rhythm.scss" />
     <Content Include="Content\sass\components\_aside-nav.scss" />
+    <Content Include="Content\sass\components\_meter.scss" />
     <None Include="Content\sass\modules\README.txt" />
     <Content Include="Content\stylesheets\pages\home\home-ie.css" />
     <Content Include="Content\stylesheets\pages\home\home.css" />
