--- a/src/IAmBacon/IAmBacon/package.json
+++ b/src/IAmBacon/IAmBacon/package.json
@@ -6,6 +6,7 @@
         "grunt": "0.4.5",
         "grunt-cli": "0.1.13",
         "grunt-sass": "~0.14.2",
+        "grunt-contrib-watch": "^0.6.1",
         "grunt-autoprefixer": "1.0.0"
     }
 }
