--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -335,6 +335,7 @@
     <Content Include="Global.asax" />
     <Content Include="googleb300e47449e1527f.html" />
     <None Include="gruntfile.js" />
+    <Content Include="humans.txt" />
     <Content Include="Scripts\html5shiv.js" />
     <Content Include="Scripts\jquery-1.9.0-vsdoc.js" />
     <Content Include="Scripts\jquery-1.9.0.js" />
